  handling updated:
    • Values < 0 are now treated as `nil` instead of 0.
    • Values outside the range of `signatures[activeSignature].parameters`
      are now treated as `nil` instead of `#signatures[activeSignature].parameters`

LUA

• Renamed `vim.diff` to `vim.text.diff`.
• |vim.net.request()| adds a minimal HTTP GET API using curl.

OPTIONS

• 'shelltemp' defaults to "false".

PLUGINS

• todo

TREESITTER

• |treesitter-directive-offset!| can now be applied to quantified captures. It
  no longer sets `metadata[capture_id].range`; it instead sets
  `metadata[capture_id].offset`. The offset will be applied in
  |vim.treesitter.get_range()|, which should be preferred over reading
  metadata directly for retrieving node ranges.

TUI

• todo

VIMSCRIPT

• todo

==============================================================================
NEW FEATURES                                                    *news-features*

The following new features were added.

API

• |api-contract| allows existing functions to change return-type from `void =>
  non-void`.
• |nvim_win_text_height()| can limit the lines checked when a certain
  `max_height` is reached, and returns the `end_row` and `end_vcol` for which
  `max_height` or the calculated height is reached.
• |vim.secure.read()| now returns `true` for trusted directories. Previously
  it would return `nil`, which made it impossible to tell if the directory was
  actually trusted.
• Added |vim.lsp.is_enabled()| to check if a given LSP config has been enabled
  by |vim.lsp.enable()|.
• |nvim_echo()| can set the |ui-messages| kind with which to emit the message.

BUILD

• A Zig-based build system has been added as an alternative to CMake. It is
  currently limited in functionality, and CMake remains the recommended option
  for the time being.

DEFAULTS

• 'statusline' default is exposed as a statusline expression (previously it
  was implemented as an internal C routine).
• 'statusline' includes |vim.diagnostic.status()|